Add configuration for JDK9+
Signed-off-by: Thomas Segismont <tsegismont@gmail.com>